Simplify blank name check